[gd_scene load_steps=3 format=3 uid="uid://cviewer789012"]

[ext_resource type="Script" path="res://scenes/player/ui/spell_nesting_viewer.gd" id="1_viewer"]
[ext_resource type="PackedScene" uid="uid://cnesting123456" path="res://scenes/player/ui/spell_nesting_tree_view.tscn" id="2_tree"]

[node name="SpellNestingViewer" type="Window"]
title = "法术嵌套结构查看器"
initial_position = 2
size = Vector2i(800, 600)
visible = false
script = ExtResource("1_viewer")

[node name="SpellNestingTreeView" parent="." instance=ExtResource("2_tree")]

[node name="CloseButton" type="Button" parent="SpellNestingTreeView/VBox/TitleBar"]
layout_mode = 2
text = "关闭"
